<resources>
    <string name="app_name">MBS</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="register">Register</string>
    <string name="logo">Micro Business Solutions</string>
    <string name="obavezno">Obavezno*</string>
    <string name="minimum_6_karaktera">Minimum 6 karaktera*</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="ulogovan">Ulogovan</string>
    <string name="popunite_sva_polja">Popunite sva polja</string>
    <string name="popunite_polje">Popunite polje</string>
    <string name="login_failed">Login Failed : </string>
    <string name="register_failed">Register Failed : </string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="city">Grad</string>
    <string name="magacini">Magacini</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="employee">Zaposleni</string>
    <string name="customer">Kupci</string>
    <string name="weather">Vreme</string>
    <string name="logout_question">Da li ste sigurni da zelite da se odjavite?</string>
    <string name="delete_question">Da li ste sigurni da zelite da obrisete?</string>
    <string name="otkazi">Otkaži</string>
    <string name="potvrdi">Potvrdi</string>
    <string name="odjavljen">Odjavljen</string>
    <string name="prazno">Prazno</string>
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="add_warehouse">Dodaj Magacin</string>
    <string name="new_employee">Novi zaposleni</string>
    <string name="new_customer">Novi kupac</string>
    <string name="update_customer">Azuriraj kupca</string>
    <string name="sacuvaj">Sacuvaj</string>
    <string name="ne_moze_biti_prazno">Ne moze biti prazno</string>
    <string name="warehouse">Magacin</string>
    <string name="copied">Kopirano</string>
    <string name="employee_id">Sifra zaposlenog</string>
    <string name="pib">PIB</string>
    <string name="delete">Obrisi</string>
    <string name="error">Greska</string>
    <string name="no_employee">Nema nijedan zaposleni</string>
    <string name="trenutno_vreme">Trenutno vreme</string>
    <string name="pritisak">Pritisak</string>
    <string name="vlaznost_vazduha">Vlaznost vazduha</string>
    <string name="failed_to_find_city">Neuspesno nalazenje grada</string>
    <string name="naziv">Naziv</string>
</resources>